@@ -1,3 +1,4 @@
+Added a floating clock control to the last tab.
 Adjusted parameter ranges and chart range to keep protein level on the chart in last tab.
 Lengthened the DNA strand on the 1st tab so edges aren't seen when zooming in/out.
 Fixed an issue where background cells were too large.
